# Detector-de-plagio

./: .gitignore  README.md  artigo_plagio.tex  dissimilar_a.txt  dissimilar_b.txt  similar_a.txt  similar_b.txt
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/src/plagiarism_detector/: __init__.py  api.py  cli.py  compare.py  data_loader.py  preprocessing.py
backend/src/plagiarism_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/tests/: test_compare.py
frontend/: .dockerignore  Dockerfile  Gemfile  Rakefile  package.json
frontend/app/assets/stylesheets/: application.css
frontend/app/controllers/: submissions_controller.rb
frontend/app/views/layouts/: application.html.erb
frontend/app/views/submissions/: new.html.erb  result.html.erb  show.html.erb
frontend/config/: application.rb  puma.rb  routes.rb
frontend/config/environments/: development.rb  production.rb  test.rb
frontend/tmp/: development_secret.txt
frontend/tmp/cache/assets/sprockets/v4.0.0/1o/: 1o3kNEHgMB9GDICjM7kUiAohzACpo137TBV9yfBKUmY.cache
frontend/tmp/cache/assets/sprockets/v4.0.0/23/: 2314Nf23mRNch976c4AKQ7IRdmQX8uQHjmn_v-EA1o8.cache
frontend/tmp/cache/assets/sprockets/v4.0.0/6j/: 6j0szbdwfDZBy6YFy6gM2SDRZXtsgVly0WIuHZAn2QM.cache
frontend/tmp/cache/assets/sprockets/v4.0.0/8S/: 8S2iriJ4vbw5sGm0JNLa2RqSUfB3zIrPirkFFN8QJOs.cache
frontend/tmp/cache/assets/sprockets/v4.0.0/8h/: 8hfqr2dFiIJZ6mHmY-n2qRmEapXgLrpVeouiKnqWpTI.cache
infra/: docker-compose.yml
infra/scripts/: setup.sh
(+32 files in other folders)
