[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plagiarism-detector"
version = "0.1.0"
description = "A plagiarism detection tool that compares text documents."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0.3",
    "numpy>=2.1.1",
    "scikit-learn>=1.5.2",
    "nltk>=3.9.1",
    "pandas>=2.2.3"
]

[project.scripts]
plagiarism-detector = "plagiarism_detector.cli:main"